--- a/Admin/src/i18n/localization/en.json
+++ b/Admin/src/i18n/localization/en.json
@@ -284,6 +284,7 @@
     "dashboard": "Manage dashboard",
     "attribute": "Manage Attribute",
     "categories": "Manage category",
+    "promotion": "Manage promotion",
     "home": "Home",
     "introduce": "Introduce",
     "news": "News",
