--- a/Admin/src/i18n/localization/vi.json
+++ b/Admin/src/i18n/localization/vi.json
@@ -306,6 +306,7 @@
     "dashboard": "Manage dashboard",
     "attribute": "Manage Attribute",
     "categories": "Manage category",
+    "promotion": "Manage promotion",
     "products": "Manage Products",
     "others": "Others",
     "news": "Manage News",
